--- a/quiz-app/docker-compose.yml
+++ b/quiz-app/docker-compose.yml
@@ -27,6 +27,7 @@ services:
       DATABASE_PASSWORD: quizpass
       FLASK_ENV: production
       FLASK_APP: app.py
+      DATABASE_TYPE: mysql
     ports:
       - "5000:5000"
     volumes:
