--- a/k8s/quiz-ui.yml
+++ b/k8s/quiz-ui.yml
@@ -56,6 +56,7 @@ spec:
 ---
 
 # Service pour exposer le frontend
+# k8s/quiz-ui.yml (Extrait du Service)
 apiVersion: v1
 kind: Service
 metadata:
@@ -64,6 +65,7 @@ spec:
   selector:
     app: quiz-ui
   ports:
-  - port: 80
-    targetPort: 80
-  type: LoadBalancer
+    - port: 80
+      targetPort: 80
+      nodePort: 32000  # On force un port spécifique pour le test
+  type: NodePort
